womtool/src/test/resources/validate/wdl/wdl_draft3/invalid/missing_subworkflow_input/missing_subworkflow_input.wdl
version 1.0

import "subworkflow.wdl" as sub

workflow missing_subworkflow_input {
  call sub.subwf
}
